--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
   --breakpoint-xs: 480px;
 
-  --background-image-hero-pattern: url("/hero-bg.png");
+  --background-image-hero-pattern: url("/BG-Poster.svg");
 }
 
 @layer base {
@@ -49,7 +49,7 @@
 }
 
 @layer components {
-  .pattern {
+  .design {
     @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0;
   }
 
